--- a/case-study/src/app/app.component.html
+++ b/case-study/src/app/app.component.html
@@ -1,6 +1,9 @@
 
 
-
 <app-header></app-header>
 <app-body></app-body>
+<app-footer></app-footer>
 
+
+<app-customer-list></app-customer-list>
+<app-customer-create></app-customer-create>
