--- a/case-study/src/app/header/header.component.html
+++ b/case-study/src/app/header/header.component.html
@@ -1,26 +1,27 @@
-
-<nav class="navbar navbar-expand-lg navbar-collapse container fixed-top border border-primary">
+<nav class="navbar navbar-expand-lg navbar-collapse  border border-bottom fixed-top bg-white">
   <div class="row text-center font-weight-bold">
     <div class="col-2 nav-item">
-      <a class="nav-link" href="$"> HOME</a>
+      <a class="nav-link" href="$"> <h6>HOME </h6></a>
     </div>
     <div class="col-2">
-      <a class="nav-link" href="$"> ABOUT</a>
+      <a class="nav-link" href="$"><h6>ABOUT </h6> </a>
     </div>
     <div class="col-2">
       <img WIDTH="50%" src="https://cdn.nhanlucnganhluat.vn/uploads/images/051D288B/logo/2018-12/Logo-FURAMA-RESORT.jpg"
            alt="logo">
     </div>
     <div class="col-2 nav-item">
-      <a class="nav-link" href="#" >VACATION OWNERSHIP</a>
+      <a class="nav-link" href="#"><h6> VACATION OWNERSHIP</h6> </a>
     </div>
-    <div>
-      <a class="nav-link" href="#" >NEWS</a>
+    <div class="col-2">
+      <a class="nav-link" href="#"> <h6>NEWS </h6></a>
     </div>
     <div class="dropdown col-2">
-      <button class="btn  dropdown-toggle font-weight-bold " type="button" id="dropdownMenuButton" data-toggle="dropdown"
+      <button class="btn  dropdown-toggle font-weight-bold " type="button" id="dropdownMenuButton"
+              data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-        CAREERS
+
+    <h6> CAREERS </h6>
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">FURAMA RESORT</a>
@@ -29,4 +30,6 @@
     </div>
   </div>
 </nav>
+
+
 
