--- a/case-study/src/app/app.component.html
+++ b/case-study/src/app/app.component.html
@@ -7,3 +7,9 @@
 
 <app-customer-list></app-customer-list>
 <app-customer-create></app-customer-create>
+
+<app-employee-list></app-employee-list>
+<app-employee-create></app-employee-create>
+
+<app-service-list></app-service-list>
+<app-contract></app-contract>
