--- a/case-study/src/app/body/body.component.html
+++ b/case-study/src/app/body/body.component.html
@@ -1,5 +1,5 @@
 
-<div CLASS="container">
+<div>
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -13,12 +13,13 @@
       </div>
     </div>
   </div>
-
+</div>
+<div class="container">
   <div class="text-center">
-    <p >INTRODUCTION</p>
-    <p>_____</p>
+    <p class="text-uppercase" style="font-family: 'Helvetica Neue'" id="introduction" >introduction</p>
     <P>
-      Overlooking the long stretch of wide white sand on Danang Beach, Furama Resort Danang is a gateway to three World Heritage Sites of Hoi An (20 minutes), My Son (90 minutes) and Hue (2 hours). The 196 rooms and suites plus 70 two to four bedroom pool villas feature tasteful décor, designed with traditional Vietnamese style and a touch of French colonial architecture and guarantee the Vietnam’s the most prestigious resort -counting royalty, presidents, movie stars and international business leaders among its celebrity guests.</P>
+      Overlooking the long stretch of wide white sand on Danang Beach, Furama Resort Danang is a gateway to three World Heritage Sites of Hoi An (20 minutes), My Son (90 minutes) and Hue (2 hours). The 196 rooms and suites plus 70 two to four bedroom pool villas feature tasteful décor, designed with traditional Vietnamese style and a touch of French colonial architecture and guarantee the Vietnam’s the most prestigious resort -counting royalty, presidents, movie stars and international business leaders among its celebrity guests.
+    </P>
   </div>
   <div class="text-center">
     <p>Service</p>
@@ -62,6 +63,8 @@
     </div>
   </div>
 </div>
+
+
 
 
 
