--- a/case-study/src/app/employee-list/employee-list.component.html
+++ b/case-study/src/app/employee-list/employee-list.component.html
@@ -1,13 +1,16 @@
 <div class="container">
-  <h2 class="text-center">Customer List</h2>
+  <h2 class="text-center">Employee List</h2>
   <table class="table">
     <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Type Customer</th>
       <th scope="col">Full Name</th>
+      <th scope="col">Position</th>
+      <th scope="col">Education Degree</th>
+      <th scope="col">Division</th>
       <th scope="col">Birthday</th>
       <th scope="col">Id Card</th>
+      <th scope="col">Salary</th>
       <th scope="col">Phone Number</th>
       <th scope="col">Email</th>
       <th scope="col">Address</th>
@@ -19,8 +22,16 @@
       <td>...</td>
       <td>...</td>
       <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
     </tr>
     </tbody>
   </table>
 
 </div>
+
