--- a/case-study/src/app/employee-create/employee-create.component.html
+++ b/case-study/src/app/employee-create/employee-create.component.html
@@ -1,27 +1,52 @@
 <div class="container">
 
-  <h2 class="text-center">Create Customer</h2>
+  <h2 class="text-center">Create Employee</h2>
   <form>
-    <div class="form-group">
-      <label for="typeCustomer">Type Customer</label>
-      <select id="typeCustomer" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
+
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name">
     </div>
 
     <div class="form-group">
+      <label for="position">Position</label>
+      <select id="position" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="educationDegree">Education Degree</label>
+      <select id="educationDegree" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="division">Division</label>
+      <select id="division" class="form-control">
+        <option selected>Choose...</option>
+        <option>...</option>
+      </select>
+    </div>
+
+    <div class="form-group">
       <label for="birthday">Birthday</label>
       <input type="date" class="form-control" id="birthday">
     </div>
+
     <div class="form-group">
       <label for="idCard">ID Card</label>
       <input type="text" class="form-control" id="idCard">
     </div>
+
+    <div class="form-group">
+      <label for="salary">Salary</label>
+      <input type="text" class="form-control" id="salary">
+    </div>
+
     <div class="form-group">
       <label for="phoneNumber">Phone Number</label>
       <input type="text" class="form-control" id="phoneNumber">
@@ -47,3 +72,4 @@
   </form>
 
 </div>
+
