--- a/case-study/src/app/header/header.component.html
+++ b/case-study/src/app/header/header.component.html
@@ -1,33 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-collapse  border border-bottom fixed-top bg-white">
-  <div class="row text-center font-weight-bold">
-    <div class="col-2 nav-item">
-      <a class="nav-link" href="$"> <h6>HOME </h6></a>
+<nav class="navbar border border-bottom fixed-top bg-white ">
+  <div class="row text-center font-weight-bold  ">
+    <DIV CLASS="col-2"></DIV>
+    <div class="col-1 nav-item">
+      <a class="text-dark p-0 text-uppercase" href="#"> <p style="font-family: 'Helvetica Neue'">home</p></a>
+    </div>
+    <div class="col-1 ">
+      <a class="text-dark text-uppercase p-0" href="#"> <p style="font-family: 'Helvetica Neue'">About</p></a>
+    </div>
+    <div class="col-1">
+      <a class="text-dark text-uppercase p-0" href="#"> <p style="font-family: 'Helvetica Neue'">furama</p></a>
     </div>
     <div class="col-2">
-      <a class="nav-link" href="$"><h6>ABOUT </h6> </a>
-    </div>
-    <div class="col-2">
-      <img WIDTH="50%" src="https://cdn.nhanlucnganhluat.vn/uploads/images/051D288B/logo/2018-12/Logo-FURAMA-RESORT.jpg"
+      <img WIDTH="20%" src="https://dothethao.net.vn/wp-content/uploads/2020/06/logo-manchester-united.png"
            alt="logo">
     </div>
     <div class="col-2 nav-item">
-      <a class="nav-link" href="#"><h6> VACATION OWNERSHIP</h6> </a>
+      <a class="text-dark text-uppercase p-0" href="#"> <p style="font-family: 'Helvetica Neue'">vacation ownership</p></a>
+
     </div>
-    <div class="col-2">
-      <a class="nav-link" href="#"> <h6>NEWS </h6></a>
+    <div class="col-1">
+      <a class="text-dark text-uppercase p-0" href="#"> <p style="font-family: 'Helvetica Neue'">news</p></a>
+
     </div>
-    <div class="dropdown col-2">
+    <div class="dropdown col-1">
       <button class="btn  dropdown-toggle font-weight-bold " type="button" id="dropdownMenuButton"
               data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-
-    <h6> CAREERS </h6>
+        <a class="text-dark text-uppercase p-0" href="#"> <p style="font-family: 'Helvetica Neue'">careers</p></a>
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">FURAMA RESORT</a>
         <a class="dropdown-item" href="#">FURAMA'S OTHER OFFICE</a>
       </div>
     </div>
+    <div class="col-1"></div>
   </div>
 </nav>
 
