--- a/8_modules_and_dependency_injection/practice/product-management/src/app/shared/nav-bar/nav-bar.component.html
+++ b/8_modules_and_dependency_injection/practice/product-management/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,2 +1,1 @@
-<a routerLink="/product/list">Product List</a> |<a routerLink="/category/list">Category List</a>
-
+<a routerLink="/product/list">Product List </a> | <a routerLink="/Category/list"> category</a>
