--- a/case-study/src/app/app.component.html
+++ b/case-study/src/app/app.component.html
@@ -1,15 +1,6 @@
 
-
-<app-header></app-header>
-<app-body></app-body>
-<app-footer></app-footer>
-
-
-<app-customer-list></app-customer-list>
-<app-customer-create></app-customer-create>
-
-<app-employee-list></app-employee-list>
-<app-employee-create></app-employee-create>
-
-<app-service-list></app-service-list>
-<app-contract></app-contract>
+<!--<app-header></app-header>-->
+<!--<app-body></app-body>-->
+<!--<app-footer></app-footer>-->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
